[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/Dialog/SimpleBox.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Graphics/graphedit_dot.png" type="Texture" id=2]
[ext_resource path="res://addons/Dialog/Graphics/arrow_down.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_right = 17.0
content_margin_bottom = 15.0
bg_color = Color( 0, 0, 0, 0.607843 )
border_width_left = 2
border_width_top = 25
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.227451, 0.741176, 0.0156863, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
shadow_color = Color( 0, 0, 0, 0.231373 )
shadow_size = 9
shadow_offset = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_right = 17.0
bg_color = Color( 0, 0, 0, 0.607843 )
border_width_left = 2
border_width_top = 25
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.227451, 0.741176, 0.0156863, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
shadow_color = Color( 0, 0, 0, 0.231373 )
shadow_size = 9
shadow_offset = Vector2( 10, 10 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.952941, 0.588235, 0.0196078, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 2.0
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.921569, 0.921569, 0.921569, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_top = 10.0
bg_color = Color( 0.00392157, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="SimpleBox" type="GraphNode"]
margin_right = 321.0
margin_bottom = 211.0
rect_min_size = Vector2( 321, 211 )
custom_icons/port = ExtResource( 2 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 2 )
custom_colors/close_color = Color( 0.686275, 0.054902, 0.054902, 1 )
custom_constants/port_offset = -12
custom_constants/close_offset = 19
custom_constants/separation = 5
custom_constants/title_offset = 20
title = "Simple"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 5
slot/1/left_color = Color( 0.862745, 0.890196, 0, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color( 1, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 15.0
margin_top = 25.0
margin_right = 333.0
margin_bottom = 39.0
mouse_filter = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 44.0
margin_right = 333.0
margin_bottom = 66.0
mouse_filter = 2

[node name="config_label" type="Label" parent="HBoxContainer1"]
margin_top = 4.0
margin_right = 292.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Config"

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer1"]
margin_left = 296.0
margin_right = 318.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_label" type="Label" parent="."]
margin_left = 15.0
margin_top = 71.0
margin_right = 333.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 40 )
text = "Character:"
valign = 1

[node name="current_text_label" type="Label" parent="."]
margin_left = 15.0
margin_top = 116.0
margin_right = 333.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 18 )
text = "Text"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 139.0
margin_right = 333.0
margin_bottom = 159.0

[node name="Panel" type="Panel" parent="HBoxContainer3"]
margin_right = 318.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="current_text_LineEdit" type="LineEdit" parent="HBoxContainer3/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -18.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )
placeholder_text = "select text..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer3/Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
text = ">"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="."]
margin_left = 15.0
margin_top = 164.0
margin_right = 333.0
margin_bottom = 194.0
rect_min_size = Vector2( 318, 30 )
mouse_filter = 2

[node name="Button" type="Button" parent="Container"]
margin_top = 5.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 26.6158, -0.808182 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Add Choice"
align = 0

[node name="TextureRect" type="TextureRect" parent="Container/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -8.0
margin_right = -3.0
margin_bottom = 8.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 15.0
margin_top = 199.0
margin_right = 333.0
margin_bottom = 219.0

[node name="Label2" type="Label" parent="."]
margin_left = 15.0
margin_top = 224.0
margin_right = 333.0
margin_bottom = 238.0
[connection signal="resize_request" from="." to="." method="_on_SimpleBox_resize_request"]
[connection signal="color_changed" from="HBoxContainer1/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="gui_input" from="HBoxContainer3/Panel" to="." method="_on_Panel_gui_input"]
[connection signal="button_down" from="Container/Button" to="." method="_on_Button_button_down"]
